# TheProjectionWizard

./: .dockerignore  .env.example  .env.test  .gitignore  .python-version  CONTEXT_REPO_STRUCTURE.md  CONTEXT_TESTING_FRAMEWORK.md  CONTEXT_WORKFLOW_RECOMMENDATION.md  CONTRIBUTING.md  COORDINATION.md  Dockerfile  FRONTEND_MIGRATION_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PIPELINE_UX_UPDATE.md  README.md  SETUP_STATUS.md  UI_IMPROVEMENTS_SUMMARY.md  activate_env.sh  api_schemas.json  app.py  app.yaml  debug_prediction_issue.py  docker-compose.yml  pyproject.toml  repomix-output.xml  requirements.txt  requirements_core.txt  run_main.sh  run_team_a.sh  setup.py  start_backend.sh  start_ngrok.sh  streamlit_team_a.py  test_single_predict_fix.py  test_validation.py
.cursor/rules/: PRD.mdc
api/: README.md  __init__.py  example_gcs_integration.py  main.py
api/routes/: __init__.py  endpoints.py  pipeline.py  schema.py
api/utils/: __init__.py  gcs_utils.py  io_helpers.py
app/: main.py  predictor.py  streamlit_team_a.py
app/pages/: 01_upload_page.py  02_target_page.py  03_schema_page.py  04_validation_page.py  05_prep_page.py  06_automl_page.py  07_explain_page.py  08_Predict.py  08_results_page.py
app/team_a/: __init__.py  main-part1.py
app/team_a/sections/: __init__.py  cleaning.py  final.py  type_override.py  upload.py  utils.py  validation.py
app/wizardry/: __init__.py  step4_task_detection.py  step5_model_selection.py  step6_training.py  step7_inference.py  step8_explainability.py  step9_outputs.py
artifacts/: model.pkl  scaler.pkl
common/: USAGE_EXAMPLES.md  constants.py  errors.py  logger.py  result_utils.py  schemas.py  status_utils.py  storage.py  utils.py
data/fixtures/: customer_churn.csv  duplicates.csv  empty.csv  house_prices.csv  imbalanced.csv  loan_approval.csv  multiclass.csv  outliers.csv  regression_nans.csv  sample_classification.csv  sample_regression.csv  valid_small.csv  validation_failure.csv  validation_failure_correct_columns.csv  wrong_dtype.csv
data/processed/: README.md
data/raw/: README.md
docs/: CONTEXT_COMPREHENSIVE_TESTING_PLAN.md  CONTEXT_PIPELINE_ARCHITECTURE.md  CONTEXT_TEST_SETUP_REQUIREMENTS.md  CONTRIBUTING.md  COORDINATION.md  IMPLEMENTATION_SUMMARY.md  INTERFACES.md  README_GCS.md  SETUP_GUIDE.md  enhanced_prediction_api.md
docs/archive/: IMPLEMENTATION_SUMMARY.md  UI_IMPLEMENTATION_SUMMARY.md  task_5_data_validation_implementation.md  task_6_context.md  task_6_data_preparation_implementation.md  task_7_context.md  task_8_context.md  task_8_explainability_implementation.md
documentation/: USAGE_EXAMPLE.md  metadata_usage.md  task_4_feature_schema_implementation.md
documentation/archive/: README data prep.md  task_5_context.md  task_7_automl_implementation.md
eda_validation/: README.md  __init__.py  cleaning.py  utils.py  ydata_profile.py
eda_validation/validation/: VALIDATION_IMPLEMENTATION.md  __init__.py  run_validation.py  setup_expectations.py
frontend/: .dockerignore  Dockerfile  index.html  package.json
frontend/src/: App.css  App.jsx
modeling/: README.md
pipeline/: orchestrator.py  repomix-output.xml
pipeline/step_1_ingest/: ingest_logic.py  test_ingest_logic.py
pipeline/step_2_schema/: feature_definition_logic.py  target_definition_logic.py
pipeline/step_3_validation/: ge_logic.py  test_ge_logic.py  validation_runner.py
pipeline/step_4_prep/: cleaning_logic.py  encoding_logic.py  prep_runner.py  profiling_logic.py
pipeline/step_5_automl/: automl_runner.py  pycaret_logic.py
pipeline/step_6_explain/: explain_runner.py  shap_logic.py
pipeline/step_7_predict/: column_mapper.py  plot_utils.py  predict_logic.py  predict_runner.py
projection_wizard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: deploy_cloud_run.sh  health_check.py  run_pipeline_cli.py  setup.py  test_cli_runner.py
scripts/bash/: gcp_init.sh  local_docker_test.sh  push_image.sh  run_local_container.sh
scripts/python/: berlin_flats_mock.csv  berlin_flats_mock_ints.csv  berlinflats.py  convert_numeric_columns.py  debug_logs.py  generate_fixtures.py  health_check.py  run_pipeline_cli.py  setup.py  setup_check.py  test_cli_runner.py  test_common.py  test_upload_gcs.py  validate_docker_setup.py
step_1_ingest/: ingest_logic.py  test_ingest_logic.py
step_2_schema/: README.md  __init__.py  feature_definition_logic.py  target_definition_logic.py
step_3_validation/: __init__.py  ge_logic.py  test_ge_logic.py  validation_runner.py
step_4_prep/: encoding_logic.py  prep_runner.py  profiling_logic.py
step_5_automl/: automl_runner.py  pycaret_logic.py
step_6_explain/: explain_runner.py  shap_logic.py
tests/: README.md  __init__.py  enhanced_house_data.csv  improved_house_data.csv  quick_test.py  target_encoded_house_data.csv  test_categorical_feature_fixes.py  test_complete_fix_verification.py  test_eda_validation.py  test_feature_encoding_fix.py  test_feature_influence_analysis.py  test_final_improvement_verification.py  test_model_training_analysis.py  test_orchestrator.py  test_prediction_investigation.py  test_print.py  test_scaling_fix.py
tests/data/fixtures/: README.md  missing_column.csv  (+2 more)
tests/fixtures/: __init__.py  fixture_generator.py
tests/integration/: quick_test.py  test_orchestrator.py  test_phase_1_infrastructure.py  test_phase_2_step_4_prep.py  test_phase_2_step_7_prediction.py  test_phase_2_step_isolation.py  test_phase_2_user_override.py  test_regression_magnitude_bug_investigation.py
tests/reports/: BACKEND_BUG_FIX_SUMMARY.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_STEP_4_PREP_SUMMARY.md  complete_test_suite_20250606_114446.json  individual_ingestion_classification_20250606_114444.json  phase_1_infrastructure_test_20250611_194331.json  phase_1_infrastructure_test_20250611_194613.json  phase_2_step_2_test_20250611_195755.json
tests/stage_tests/: test_ingestion.py
tests/unit/: test_result.py
ui/: 01_upload_page.py  02_target_page.py  03_schema_page.py  04_validation_page.py  05_prep_page.py  06_automl_page.py  07_explain_page.py  08_results_page.py
(+7 files in other folders)
