[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projection-wizard"
version = "1.0.0"
description = "A modular end-to-end machine learning pipeline for tabular data"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine-learning", "automl", "data-science", "streamlit"]
authors = [
    {name = "The Projection Wizard Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pycaret>=3.1.0",
    "great-expectations>=0.17.0",
    "ydata-profiling>=4.5.0",
    "shap>=0.42.0",
    "streamlit>=1.28.0",
    "pydantic>=2.4.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "ipykernel>=6.25.0",
]

[project.urls]
Homepage = "https://github.com/projection-wizard/projection-wizard"
Documentation = "https://github.com/projection-wizard/projection-wizard#readme"
Repository = "https://github.com/projection-wizard/projection-wizard.git"
"Bug Tracker" = "https://github.com/projection-wizard/projection-wizard/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "venv/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
] 